# mesh

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  component.mk  hwconfig.h  idf_component.yml  main.cpp
main/app/: angular_pages.cpp  angular_pages.hpp  integrated_led_blinker.cpp  integrated_led_blinker.hpp
main/app/light_strip/: json_serialization.cpp  json_serialization.hpp  light_strip_context.hpp  light_strip_controller.cpp  light_strip_controller.hpp  light_strip_http_interface.cpp  light_strip_http_interface.hpp
main/app/light_strip/helpers/: json_serialization.cpp  json_serialization.hpp  serialization.cpp  serialization.hpp
main/app/light_strip/processors/: brightness_processor.cpp  brightness_processor.hpp  color_corrector.cpp  color_corrector.hpp  color_processor.cpp  color_processor.hpp  json_serialization.cpp  json_serialization.hpp
main/app/light_strip/settings/: brightness_processor_settings.cpp  brightness_processor_settings.hpp  device_settings.cpp  device_settings.hpp  empty_source_settings.cpp  empty_source_settings.hpp  light_source_settings.hpp  light_strip_settings.cpp  light_strip_settings.hpp  rainbow_source_settings.cpp  rainbow_source_settings.hpp  static_source_settings.cpp  static_source_settings.hpp  uart_source_settings.cpp  uart_source_settings.hpp  udp_source_settings.cpp  udp_source_settings.hpp  usb_source_settings.cpp  usb_source_settings.hpp
main/app/light_strip/sources/: empty_source.cpp  empty_source.hpp  json_serialization.cpp  json_serialization.hpp  light_source.cpp  light_source.hpp  rainbow_source.cpp  rainbow_source.hpp  static_source.cpp  static_source.hpp  uart_source.cpp  uart_source.hpp  udp_source.cpp  udp_source.hpp  usb_source.cpp  usb_source.hpp
main/graphics/: colors.cpp  colors.hpp  gamma_correction.cpp  gamma_correction.hpp
main/infrastructure/: array_view.hpp  bitwise_operations.hpp  dependencies.cpp  dependencies.hpp  error.cpp  error.hpp  event_handler.hpp  event_loop.cpp  event_loop.hpp  events.hpp  hasher.cpp  hasher.hpp  json.cpp  json.h  json.hpp  logger.cpp  logger.hpp  task.hpp  text.cpp  text.hpp  traits.hpp  value_container.hpp
main/networking/: http.cpp  http.hpp  http_query.cpp  http_query.hpp  http_query_method.cpp  http_query_method.hpp  http_server.cpp  http_server.hpp  http_socket.cpp  http_socket.hpp  http_stream.cpp  http_stream.hpp  http_text_stream.cpp  http_text_stream.hpp  mime_type.cpp  mime_type.hpp  ntp_client.cpp  ntp_client.hpp  socket_handle.cpp  socket_handle.hpp  wifi.cpp  wifi.hpp
main/numerics/: float3.cpp  float3.hpp  math_extensions.hpp
main/peripherals/: integrated_led.cpp  integrated_led.hpp  led_strip.hpp  uart_stream.cpp  uart_stream.hpp  usb_descriptors.hpp  usb_hid.cpp  usb_hid.hpp  usb_keyboard.hpp  usb_lamp_array.hpp  usb_lamp_array_descriptor.hpp  usb_test.cpp  usb_test.hpp  ws2812_strip.cpp  ws2812_strip.hpp  ws281x_strip.cpp  ws281x_strip.hpp
main/peripherals/usb/: configuration_builder.cpp  configuration_builder.hpp  descriptors.cpp  descriptors.hpp  device_builder.cpp  device_builder.hpp
main/serialization/: json.hpp
main/serialization/json/: json_array.cpp  json_array.hpp  json_boolean.cpp  json_boolean.hpp  json_container_serializer.cpp  json_container_serializer.hpp  json_multi_serializer.hpp  json_null.cpp  json_null.hpp  json_number.cpp  json_number.hpp  json_object.cpp  json_object.hpp  json_string.cpp  json_string.hpp  json_value.cpp  json_value.hpp
main/storage/: embedded.cpp  embedded.hpp  file_io.cpp  file_io.hpp  memory_stream.cpp  memory_stream.hpp  nvs.cpp  nvs.hpp  serializer.hpp  spiffs.cpp  spiffs.hpp  stream.cpp  stream.hpp
main/threading/: event.cpp  event.hpp  task.cpp  task.hpp
ui/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxy.conf.json
ui/src/: index.html  styles.scss
ui/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
ui/src/app/components/light-strip/: light-strip.component.html  light-strip.component.spec.ts  light-strip.component.ts
ui/src/app/components/rainbow-light-source/: rainbow-light-source.component.html  rainbow-light-source.component.spec.ts  rainbow-light-source.component.ts
ui/src/app/components/static-light-source/: static-light-source.component.html  static-light-source.component.spec.ts  static-light-source.component.ts
ui/src/app/components/uart-light-source/: uart-light-source.component.html  uart-light-source.component.spec.ts  uart-light-source.component.ts
ui/src/app/components/udp-light-source/: udp-light-source.component.html  udp-light-source.component.spec.ts  udp-light-source.component.ts
ui/src/app/data/: light-strip-settings.ts
ui/src/app/framework/: call-limiter.ts
ui/src/app/services/: light-strip-service.ts
