idf_component_register(SRCS "main.cpp"
                            "infrastructure/dependencies.cpp"
                            "infrastructure/error.cpp"
                            "infrastructure/event_loop.cpp"
                            "infrastructure/hasher.cpp"
                            "infrastructure/logger.cpp"
                            "infrastructure/text.cpp"
                            "networking/http_query_method.cpp"
                            "networking/http_text_stream.cpp"
                            "networking/http_query.cpp"                            
                            "networking/http_server.cpp"
                            "networking/wifi.cpp"
                            "storage/embedded.cpp"
                            "storage/nvs.cpp"
                       INCLUDE_DIRS "."
                       EMBED_FILES "www/favicon.png")