idf_component_register(SRCS 
                        "graphics/colors.cpp"

                        "infrastructure/dependencies.cpp"
                        "infrastructure/error.cpp"
                        "infrastructure/event_loop.cpp"
                        "infrastructure/hasher.cpp"
                        "infrastructure/logger.cpp"
                        "infrastructure/text.cpp"

                        "threading/task.cpp"
                        "threading/event.cpp"

                        "networking/mime_type.cpp"
                        "networking/http_query_method.cpp"
                        "networking/http_text_stream.cpp"
                        "networking/http_query.cpp"
                        "networking/http_socket.cpp"
                        "networking/http_server.cpp"
                        "networking/ntp_client.cpp"
                        "networking/wifi.cpp"
                        "networking/socket_handle.cpp"

                        "numerics/float3.cpp"

                        "peripherals/integrated_led.cpp"
                        "peripherals/ws281x_strip.cpp"
                        "peripherals/uart_stream.cpp"

                        "storage/embedded.cpp"
                        "storage/nvs.cpp"
                        "storage/spiffs.cpp"
                        "storage/file_io.cpp"
                        "storage/stream.cpp"
                        "storage/memory_stream.cpp"

                        "serialization/json/json_value.cpp"
                        "serialization/json/json_null.cpp"
                        "serialization/json/json_boolean.cpp"
                        "serialization/json/json_number.cpp"
                        "serialization/json/json_string.cpp"
                        "serialization/json/json_array.cpp"
                        "serialization/json/json_object.cpp"

                        "app/angular_pages.cpp"
                        "app/integrated_led_blinker.cpp"
                        "app/light_strip/helpers/json_serialization.cpp"
                        "app/light_strip/settings/device_settings.cpp"
                        "app/light_strip/settings/empty_source_settings.cpp"
                        "app/light_strip/settings/static_source_settings.cpp"
                        "app/light_strip/settings/rainbow_source_settings.cpp"
                        "app/light_strip/settings/udp_source_settings.cpp"
                        "app/light_strip/settings/uart_source_settings.cpp"
                        "app/light_strip/settings/brightness_processor_settings.cpp"
                        "app/light_strip/settings/light_strip_settings.cpp"
                        "app/light_strip/sources/light_source.cpp"
                        "app/light_strip/sources/empty_source.cpp"
                        "app/light_strip/sources/static_source.cpp"
                        "app/light_strip/sources/rainbow_source.cpp"
                        "app/light_strip/sources/udp_source.cpp"
                        "app/light_strip/sources/uart_source.cpp"
                        "app/light_strip/processors/color_processor.cpp"
                        "app/light_strip/processors/brightness_processor.cpp"
                        "app/light_strip/light_strip_controller.cpp"
                        "app/light_strip/light_strip_http_interface.cpp"

                        "main.cpp"
                       INCLUDE_DIRS "."
                       EMBED_FILES 
                        "www/favicon.png.gz"
                        "www/index.html.gz"
                        "www/main.js.gz"
                        "www/polyfills.js.gz"
                        "www/runtime.js.gz"
                        "www/styles.css.gz")